<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#60000000"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/innerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp44"
            android:gravity="center"
            android:text="@string/str_select_language"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/sp12"
            />

        <View
            style="@style/line"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            />

        <TextView
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp44"
            android:gravity="center"
            android:text="@string/str_english"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp14"
            />

        <View
            style="@style/line"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            />

        <TextView
            android:id="@+id/zh"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp44"
            android:gravity="center"
            android:text="@string/str_zh"
            android:textColor="@color/color_333333"
            />

        <View
            style="@style/line"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_marginRight="@dimen/dp15"
            />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp44"
            android:gravity="center"
            android:text="@string/str_cancel"
            android:textColor="@color/color_333333"
            />

    </LinearLayout>

</RelativeLayout>