<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ImageView
    android:id="@+id/icon"
    android:layout_width="@dimen/dp40"
    android:layout_height="@dimen/dp40"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="@dimen/dp30"
    android:src="@mipmap/ic_verify"
    />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:text="@string/str_agin_verify_title"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="@dimen/dp18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon"


        />


    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp60"
        android:text="@string/str_agin_verify"
        android:textColor="@color/color_444444"
        android:textStyle="bold"
        android:textSize="@dimen/dp14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"


        />


    <TextView
        android:id="@+id/recycler1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp80"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_bg_edit_bg"
        android:padding="@dimen/dp8"
        android:layout_marginStart="@dimen/dp15"
        android:layout_marginEnd="@dimen/dp15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle"
        tools:ignore="MissingConstraints" />



    <Button
        android:id="@+id/select_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_select_img"
        android:textColor="@android:color/white"
        android:background="@drawable/shap_round_solid_textview1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler1"
        android:layout_marginTop="@dimen/dp50"
        />




    <Button
        android:id="@+id/finish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:layout_marginTop="48dp"
        android:background="@drawable/shap_round_solid_textview1"
        android:text="@string/str_ok"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />


</android.support.constraint.ConstraintLayout>